# wraylib3d

./: .gitignore  Building Statically Built Libraries in Haskell.txt  Building and using Win32 DLLs.txt  CHANGELOG.md  LICENSE  README.md  TODO.md  WrayLib Structure.md  base.shader  create_db_instructions.txt  hraylib3d.cabal  loadGlTF.cpp  package.yaml  q3dm1.entities  read.py  stack.yaml
.lc_q3.cache/: SampleMaterial.lc  q3dm1.json  q3dm17.entities  q3dm1_test.json  q3dm7.entities  q3tourney2.entities
WebAssembly/: hello.hs  howToBuildHsToWASM.md
app/: Main.hs  simpleParser.hs
app/RB-ProjectManager-FE-Demo/: Main.hs  TodoTypes.hs
app/RealmBuilder-FE-Demo/: OpenGLWidget.hs
app/RealmViewer-FE-Demo/: BookTypes.hs  Main.hs  OpenGLWidget.hs  glutTest.hs  read.py
app/RealmViewer-FE-Demo/Lib/: Types.hs  Utils.hs  Widgets.hs
assets/images/: material-file.psd  script-file-generic.psd
assets/images/file-icon/: script-file-generic.psd
assets/projects/default/: default.wrlp  root.rb
bonepile/: Control.hs  Json.hs  RegexParser.hs  Utils.hs  ruby.h  shim.c  sideBar.hs
bonepile/Control/: NetworkManager.hs  Sequencer.hs
bonepile/OpenGL/Format/: Glb.hs  Gltf.hs
bonepile/RubyInterpreterHS/: Functions.hs
bonepile/Utils/: Benchmarks.hs  Continuation.hs  Conversion.hs  Json.hs  Log.hs  Prisms.hs  Subprocess.hs  Templating.hs  Tooltips.hs
bonepile/cbits/: shim.h
bonepile/cbits/RubyInterpreterHS/: Internal.hs
bonepile/language-metal/: language-metal.cabal
bonepile/language-metal/Language/Metal/: Parser.hs  Syntax.hs
cbits/ruby/: _ansi.h  defines.h  ieeefp.h  stdalign.h  unistd.h  utime.h
crash_dumps/: 3-30-2024-HRAYLIB-HRUBY.txt  3-30-2024-HRAYLIB-NO-HRUBY.txt
dist-newstyle/cache/: compiler  config
script-engine/: hello.rb  simple.rb
script-engine/Advanced/: audioPlayback.rb  audioTest.rb  entity.rb  package.gemfile.rb  player.rb  scriptComponent.rb
shaders/: frag.glsl  vert.glsl
shaders/Quake/: base.shader  base_floor.shader  common.shader  ctf.shader  eerie.shader  gothic_wall.shader  hell.shader  liquid.shader  sfx.shader  sky.shader  test.shader
src/: HRayLib3d.hs
src/HRayLib3d/: Benchmarks.hs  Core.hs  GameEngine.hs  GuideWriter.hs  Network.hs  ScriptEngine.hs  Utils.hs  WindowSystem.hs
submodules/: TH.hs
submodules/OpenXRRaw/: OpenXRRaw.cabal  package.yaml
submodules/hpython/: hpython.cabal
submodules/hruby/: hruby.cabal
submodules/hruby/dist-newstyle/cache/: compiler  config
submodules/lambdacube-compiler/: lambdacube-compiler.cabal
submodules/lambdacube-directx/: DirectX_In_Haskell.txt  lambdacube-directx.cabal  package.yaml  stack.yaml
submodules/lambdacube-gles/: lambdacube-gl.cabal
submodules/lambdacube-ir/: lambdacube-ir.cabal
submodules/lambdacube-metal/: lambdacube-metal.cabal  package.yaml  stack.yaml  xcode.md
submodules/lambdacube-vulkan/: Untitled-1.md  lambdacube-vulkan.cabal
submodules/lambdacube-xr/: Untitled-1.md  lambdacube-xr.cabal  package.yaml  stack.yaml
submodules/megastore/: megastore.cabal
submodules/monomer/: monomer.cabal
submodules/wavefront/: wavefront.cabal
test/: Spec.hs  example.gltf  react.jsx
test/gltf-test/: CHANGELOG.md  README.md  gltf-test.cabal  package.yaml  stack.yaml
test/metal/: sample-01.metal
test/test-assets/: WRay2.gltf
tools/: Notes on making a Widget for direct backend interaction.hs
wraylib3d-xross/: mingw-w64-x86_64-SDL2-2.0.14-2-any.pkg.tar.zst
wraylib3d-xross/cmakegen/: build_wraylib3d_exe.cmake  hs2c.cpp
wraylib3d-xross/makegen/: wraylib3d_example_configure.ac  wrl3d_Makefile.am
wraylib3d-xross/mobile/: Game.djinni  runDjinni.bat  runDjinni.sh
wraylib3d-xross/wasm/: .gitlab-ci.yml  README.md  autogen.js  autogen.json  cabal.config  flake.nix  setup.sh
wraylib3d-xross/webgl/: compileShaderFromScript.js  example_index.html  webgl-main.js  webgl-utils.js
(+514 files in other folders)
