name:                language-metal
version:             0.3.0
Cabal-Version:       >= 1.8
synopsis:            Metal abstract syntax tree, parser, and pretty-printer
description:
  The package language-metal is a Haskell library for the
  representation, the parsing, and the pretty-printing of
  Metal 3 code.

category:            Language, Graphics
license:             BSD3
license-file:        LICENSE
author:              Miles J. Litteral
maintainer:          mandaloe2@gmail.com
build-type:          Simple

extra-source-files:  metal/sample-01.metal

source-repository head
  type: git
  location: https://github.com/MilesLitteral/language-metal

library
  build-depends:       base < 5,
                       parsec,
                       prettyclass
  ghc-options:         -Wall
  exposed-modules:     Language.Metal,
                       Language.Metal.Parser,
                       Language.Metal.Pretty,
                       Language.Metal.Syntax

executable metal-pprint
  main-is:             metal-pprint.hs
  hs-source-dirs:      bin/
  build-depends:       base < 5,
                       language-metal,
                       parsec,
                       prettyclass
  ghc-options:         -Wall

Test-Suite tests
  Type:            exitcode-stdio-1.0
  build-depends:   base < 5,
                   HUnit,
                   language-metal,
                   parsec,
                   prettyclass,
                   test-framework,
                   test-framework-hunit
  ghc-options:     -Wall
  Hs-Source-Dirs:  tests
  main-is:         Tests.hs
